--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <menu
         role="menu"
         aria-label="Notifications menu"
-        class="dropdown border p-5 d-none"
+        class="dropdown border p-4 d-none"
         id="notifaction_drop"
       >
         <div>
@@ -162,10 +162,10 @@
           </div>
         </div>
 
-        <div class="mt-5 p-5 bg-light">
-          <h4 role="heading" class="font-bold text-md text-light">
+        <div class="mt-5 p-5 text-center">
+          <p role="heading" class="font-bold text-md text-dark">
             Alerts about your store and account will show here
-          </h4>
+          </p>
         </div>
       </menu>
 
@@ -179,7 +179,7 @@
           >
             <div class="flex items-center">
               <div
-                class="name_profiler mr-auto flex items-center gap-5 text-md"
+                class="name_profiler mr-auto flex items-center gap-3 text-md"
               >
                 <div class="btn_name text-dark">DC</div>
                 <div class="font-medium text-md text-dark">
@@ -206,7 +206,7 @@
           </a>
 
           <a href="https://admin.shopify.com" role="link">
-            <div class="flex items-center mt-3">
+            <div class="flex items-center mt-1_2">
               <button class="drop_link text-dark flex items-center gap-5">
                 <div class="ico_wrap">
                   <svg
@@ -233,7 +233,7 @@
         <div class="drop_wrap">
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Help Center</span>
@@ -241,7 +241,7 @@
 
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Change log</span>
@@ -249,7 +249,7 @@
 
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Community forums</span>
@@ -257,7 +257,7 @@
 
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Hire a Shopify Partner</span>
@@ -265,7 +265,7 @@
 
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Keyboard shortcuts</span>
@@ -275,7 +275,7 @@
         <div class="drop_wrap border-0">
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class=" text-dark p-1 d-block"
             role="link"
           >
             <span class="text-md d-block">
@@ -290,7 +290,7 @@
 
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Manage account</span>
@@ -298,7 +298,7 @@
 
           <a
             href="https://admin.shopify.com"
-            class="drop_link text-dark no_ico p-3 d-block"
+            class="drop_link text-dark d-block"
             role="link"
           >
             <span class="text-md">Log out</span>
